fix: flex-wrap homepage buttons
So overflow rather than overlap on mobile

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -935,6 +935,10 @@ div.highlighter-rouge {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
@@ -945,6 +949,10 @@ div.highlighter-rouge {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
